--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -72,7 +72,7 @@ const path = Astro.url.pathname.toLowerCase();
             class="block py-2 hover:text-green-700 font-semibold">breeding</a
         >
         <a href="#meat" class="block py-2 hover:text-green-700 font-semibold"
-            >Meat</a
+            >activity</a
         >
     </div>
 </div>
