--- a/src/pages/breeding.astro
+++ b/src/pages/breeding.astro
@@ -14,8 +14,9 @@ const title = "Breeding Page";
     <Navbar />
     <div class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-3 gap-3 p-4">
         <div class="max-w-6xl mx-auto px-5 py-10">
-            <h1 class="text-4xl font-bold text-green-800 font-bebas mb-6">
-                Breeding Information
+            <h1 class="text-4xl font-bold font-bebas mb-6">
+                Breeding <span class="text-green-600 text-5xl">Information</span
+                >
             </h1>
             <p class="text-lg text-gray-700 mb-4">
                 At Embek Probolinggo Farm, we prioritize ethical and sustainable
