--- a/src/pages/product.astro
+++ b/src/pages/product.astro
@@ -21,10 +21,8 @@ const title = "Product Page";
         </div>
         <div class="absolute inset-0 bg-gradient-to-t from-white"></div>
         <div class="relative z-10 max-w-6xl mx-auto px-5 py-5">
-            <h1
-                class="text-center text-4xl font-bold text-green-800 font-bebas"
-            >
-                Our Product
+            <h1 class="text-center text-4xl font-bold font-bebas">
+                Our <span class="text-green-600 text-5xl">Products</span>
             </h1>
             <p
                 class="mt-4 text-lg text-gray-700 p-4 rounded-lg"
@@ -41,10 +39,8 @@ const title = "Product Page";
         </div>
     </div>
     <div class="max-w-6xl mx-auto md:mt-10 mb-5 relative">
-        <h2
-            class="text-3xl font-bold text-green-800 font-bebas px-5 mb-6 text-center"
-        >
-            Featured Products
+        <h2 class="text-4xl font-bold font-bebas px-5 mb-6 text-center">
+            Featured <span class="text-green-600 text-5xl">Products</span>
         </h2>
         <div class="grid grid-cols-1 px-3">
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
