--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -32,22 +32,22 @@ const path = Astro.url.pathname.toLowerCase();
         <nav class="hidden md:flex gap-6">
             <a
                 href="/about"
-                class={`hover:text-green-900 font-semibold text-lg ${path === "/about" ? "text-green-900" : "text-gray-600"}`}
+                class={`hover:text-green-600 font-semibold text-lg ${path === "/about" ? "text-green-600" : "text-gray-600"}`}
                 >ABOUT</a
             ><span>|</span>
             <a
                 href="/product"
-                class={`hover:text-green-900 font-semibold text-lg ${path === "/product" ? "text-green-900" : "text-gray-600"}`}
+                class={`hover:text-green-600 font-semibold text-lg ${path === "/product" ? "text-green-600" : "text-gray-600"}`}
                 >PRODUCT</a
             ><span>|</span>
             <a
                 href="/breeding"
-                class="text-gray-600 hover:text-green-900 font-semibold text-lg"
+                class={`hover:text-green-600 font-semibold text-lg ${path === "/breeding" ? "text-green-600" : "text-gray-600"}`}
                 >breeding</a
             ><span>|</span>
             <a
-                href="#activity"
-                class="text-gray-600 hover:text-green-900 font-semibold text-lg"
+                href="/activity"
+                class={`hover:text-green-600 font-semibold text-lg ${path === "/activity" ? "text-green-600" : "text-gray-600"}`}
                 >activity</a
             >
         </nav>
@@ -59,19 +59,26 @@ const path = Astro.url.pathname.toLowerCase();
     <!-- Mobile Menu -->
     <div
         id="mobileMenu"
-        class="md:hidden max-h-0 overflow-hidden transition-all duration-500 ease-in-out bg-white px-4 space-y-2 font-bebas"
+        class="md:hidden max-h-0 overflow-hidden transition-all duration-500 ease-in-out bg-white px-4 space-x-2 font-bebas"
     >
-        <a href="/about" class="block py-2 hover:text-green-700 font-semibold"
+        <a
+            href="/about"
+            class={`hover:text-green-600 font-semibold text-lg ${path === "/about" ? "text-green-600" : "text-gray-600"}`}
             >ABOUT</a
-        >
-        <a href="/product" class="block py-2 hover:text-green-700 font-semibold"
+        ><span>|</span>
+        <a
+            href="/product"
+            class={`hover:text-green-600 font-semibold text-lg ${path === "/product" ? "text-green-600" : "text-gray-600"}`}
             >PRODUCT</a
-        >
+        ><span>|</span>
         <a
             href="/breeding"
-            class="block py-2 hover:text-green-700 font-semibold">breeding</a
-        >
-        <a href="#meat" class="block py-2 hover:text-green-700 font-semibold"
+            class={`hover:text-green-600 font-semibold text-lg ${path === "/breeding" ? "text-green-600" : "text-gray-600"}`}
+            >breeding</a
+        ><span>|</span>
+        <a
+            href="/activity"
+            class={`hover:text-green-600 font-semibold text-lg ${path === "/activity" ? "text-green-600" : "text-gray-600"}`}
             >activity</a
         >
     </div>
